# a2a-ann

./: .gitignore  CMakeLists.txt  README.md  main.c  performance_tests.c  requirements.txt
.github/workflows/: ci-ann-benchmarks.yml  ci-build.yml  ci-knn-benchmarks.yml  ci-test.yml  ci-valgrind.yml
HW1-KNN-Search/: .gitignore  CMakeLists.txt  README.md  knnsearch_exact.c  knnsearch_serial.c  main.c  performance_tests.c  rand_data_gen.asv  rand_data_gen.m  tests.c  validity_tests.c
HW1-KNN-Search/benchmark/: benchmarks.c
HW1-KNN-Search/include/: AnnoyTree.h  ioutil.h  knnsearch.h  knnsearch_approx.h  knnsearch_exact.h
HW1-KNN-Search/src/: AnnoyTree.c  Queue.c  ioutil.c  knnsearch.c  knnsearch_approx.c  knnsearch_exact.c
HW1-KNN-Search/test/: approx_analysis.m  approx_tests.m  benchmarks.m  data.mat  file_testing_function.m  generate_knn_tests.m  generate_test_files.m  knn_testing_function.m  knn_tests.sh  knnsearch_approx_tests.c  knnsearch_approx_tests.sh  knnsearch_exact_tests.c  knnsearch_exact_tests.sh  knnsearch_tests.sh  performance_analysis.m  performance_test_generator.m  test_generator.m  validity_test_generator.m
benchmark/: benchmarks.c  benchmarks.sh  compute_all_to_all_knn.m  main.m  plotQueriesPerSec.m  plot_benchmarks.m  plot_knn_benchmarks.m  run_benchmarks.sh
benchmark/ann-benchmark/: ann_benchmarks.c  compute_all_to_all_knn.py  plot_ann_benchmarks.m  plot_ann_benchmarks.py  run_ann_benchmarks.sh
benchmark/knn-benchmark/: knn_benchmarks.c  plot_knn_benchmarks.m  plot_knn_benchmarks.py  run_knn_benchmarks.sh
benchmarks/ann-benchmarks/: ann_benchmark.c  ann_benchmark.h  ann_benchmark_opencilk.c  ann_benchmark_openmp.c  ann_benchmarks.c  compute_all_to_all_knn.py  plot_ann_benchmarks.py  run_ann_benchmarks.sh
benchmarks/knn-benchmarks/: knn_benchmark.c  knn_benchmark.h  knn_benchmark_opencilk.c  knn_benchmark_openmp.c  knn_benchmarks.c  plot_knn_benchmarks.py  run_knn_benchmarks.sh
docs/: main.tex
examples/: ann_example.c  knn_example.c
include/: Queue.h  a2a_ann.h  a2a_config.h  a2a_knn.h  a2a_queue.h  ann_config.h  knn.h  knnsearch.h  knnsearch_approx.h  memory.h  template_definitions.h
src/: a2a_ann.c  a2a_knn.c  a2a_queue.c  ann_config.c  ioutil.c  knn.c  knnsearch.c  memory.c
test/: approx_analysis.m  benchmarks.m  generate_tests.m  generate_tests.py  knnsearch_approx_tests.c  knnsearch_approx_tests.sh  knnsearch_tests.sh  run_tests.sh  tests.c
tests/: generate_tests.py  run_tests.sh  tests.c
util/: ioutil.c  ioutil.h
utils/: ioutil.c
valgrind/: ann_example.c  generate_data.py  knn_example.c  run_valgrind.sh
